# PDFacil

./: TAURI.md  about.html  contact.html  index.html  licensing.html  package-lock.json  package.json
public/locales/en/: common.json
public/locales/pt-BR/: common.json  tools.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/js/: main.ts
src/js/i18n/: i18n.ts
src/js/logic/: merge-pdf-page.ts  remove-annotations-page.ts
src/js/utils/: helpers.ts  simple-mode-footer.ts
src/pages/: add-attachments.html  add-blank-page.html  add-stamps.html  add-watermark.html  alternate-merge.html  background-color.html  bmp-to-pdf.html  bookmark.html  change-permissions.html  combine-single-page.html  compare-pdfs.html  compress-pdf.html  crop-pdf.html  decrypt-pdf.html  delete-pages.html  divide-pages.html  edit-attachments.html  edit-metadata.html  edit-pdf.html  encrypt-pdf.html  extract-attachments.html  extract-pages.html  fix-page-size.html  flatten-pdf.html  form-creator.html  form-filler.html  header-footer.html  heic-to-pdf.html  image-to-pdf.html  invert-colors.html  jpg-to-pdf.html  json-to-pdf.html  linearize-pdf.html  merge-pdf.html  n-up-pdf.html  ocr-pdf.html  organize-pdf.html  page-dimensions.html  page-numbers.html  pdf-multi-tool.html  (+27 more)
